@@ -1,37 +1,40 @@
 package io.gumga.domain.domains.usertypes;
 
+import io.gumga.domain.GumgaQueryParserProvider;
 import io.gumga.domain.domains.GumgaBoolean;
 import org.hibernate.HibernateException;
 import org.hibernate.engine.spi.SessionImplementor;
+import org.hibernate.type.BooleanType;
+import org.hibernate.usertype.EnhancedUserType;
 
-import java.sql.PreparedStatement;
-import java.sql.ResultSet;
-import java.sql.SQLException;
-import java.sql.Types;
+import java.sql.*;
 
 /**
  * UserType que permite serializar o tipo dentro do Hibernate
  */
-public class GumgaBooleanUserType extends MutableUserType {
+public class GumgaBooleanUserType extends MutableUserType implements EnhancedUserType {
 
     @Override
     public int[] sqlTypes() {
-        return new int[]{Types.BOOLEAN};
+        return new int[]{
+                BooleanType.INSTANCE.sqlType()
+        };
     }
 
+    @SuppressWarnings("rawtypes")
     @Override
     public Class returnedClass() {
         return GumgaBoolean.class;
     }
 
-    @Override
-    public boolean equals(Object obj) {
-        return super.equals(obj); //To change body of generated methods, choose Tools | Templates.
-    }
+//    @Override
+//    public boolean equals(Object obj) {
+//        return super.equals(obj); //To change body of generated methods, choose Tools | Templates.
+//    }
 
     @Override
     public boolean equals(Object o, Object o1) throws HibernateException {
-        if (o == null) {
+        if (o == null || o1 == null) {
             return false;
         }
         return o.equals(o1);
@@ -66,8 +69,9 @@ public class GumgaBooleanUserType extends MutableUserType {
         if (null == value) {
             preparedStatement.setNull(property, java.sql.Types.BOOLEAN);
         } else {
-            final GumgaBoolean object = (GumgaBoolean) value;
-            preparedStatement.setBoolean(property, object.getValue());
+            Boolean result = value.toString().equals("true") ? Boolean.TRUE : Boolean.FALSE;
+            BooleanType.INSTANCE.set(preparedStatement, result, property, sessionImplementor);
+//            preparedStatement.setBoolean(property, value.toString().equals("true") ? Boolean.TRUE : Boolean.FALSE);
         }
     }
 
@@ -76,15 +80,32 @@ public class GumgaBooleanUserType extends MutableUserType {
         if (value == null) {
             return null;
         }
-
-        final GumgaBoolean recebido = (GumgaBoolean) value;
-        final GumgaBoolean aRetornar = new GumgaBoolean(recebido);
-        return aRetornar;
+        Boolean result = value.toString().equals("true") ? Boolean.TRUE : Boolean.FALSE;
+        return new GumgaBoolean(result);
     }
 
     @Override
-    public int hashCode() {
-        return super.hashCode(); //To change body of generated methods, choose Tools | Templates.
+    public String objectToSQLString(Object value) {
+        if(GumgaQueryParserProvider.defaultMap.equals(GumgaQueryParserProvider.getOracleLikeMap()) || GumgaQueryParserProvider.defaultMap.equals(GumgaQueryParserProvider.getOracleLikeMapWithAdjust())) {
+            return value != null && value.toString().equals("true") ? "1" : "0";
+        }
+        return value != null && value.toString().equals("true") ? "true" : "false";
     }
+
+    @Override
+    public String toXMLString(Object value) {
+        return null;
+    }
+
+    @Override
+    public Object fromXMLString(String xmlValue) {
+        return null;
+    }
+
+//    @Override
+//    public int hashCode() {
+//        return super.hashCode(); //To change body of generated methods, choose Tools | Templates.
+//    }
+
 
 }
